# mse1h2026-req-viz

./: Instruction.md  README.md  app.py  customer_sync.md  database.py  docker-compose.yml  main.py  parser.py  pyproject.toml  reports.md  script_start.sh  visualization.py
.github/workflows/: backend-ci.yml
UI/: Dockerfile  app.py  config.py  graph_handler.py  graph_operations.py  report_generator.py  services.py  state_manager.py  ui_components.py  visualization.py
UI/.streamlit/: config.toml
docs/: dbpedia_usage.md  stackoverlow_usage.md
ecosystem_analyzer/: Dockerfile  __init__.py  database.py  main.py  models.py  parser.py  pyproject.toml
ecosystem_analyzer/templates/: report_prompt.md
graph/: __init__.py  connection.py  exceptions.py  models.py  pyproject.toml  repository.py  service.py
graph/tests/: test_connection.py  test_models.py  test_repository.py  test_service.py
parser/: config.yml  parser.py  pyproject.toml  relationships.yml  technologies.yml
parser/dbpedia/: dbpedia.py  rest.py  sparql.py
parser/wikidata/: rest.py  sparql.py  wikidata.py
team_sync/: README.md  Созвон №1 (19.02).md  Созвон №2 (02.03).md  Созвон №3 (01.04).md  Созвон №4 (12.05).md
tests/integration/: conftest.py  docker-compose.test.yml  requirements.txt  test_graph_api.py
