[project]
name = "mse1h2026-req-viz"
version = "0.1.0"
description = ""
authors = [
    {name = "w3hhh-m",email = "w3hhh.m@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "neo4j (>=6.1.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
